infrastructure/kube/keep-test/keep-dapp-token-dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keep-dapp-token-dashboard
  namespace: default
  labels:
    app: keep-dapp
    type: token-dashboard
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: dashboard-test-keep-network
  backend:
    serviceName: keep-dapp-token-dashboard
    servicePort: 80
